Change all things burrito to URLs and modify iterations

--- a/src/components/UrlContainer/UrlContainer.css
+++ b/src/components/UrlContainer/UrlContainer.css
@@ -1,12 +1,7 @@
-.order {
+.url {
   border: 1px solid black;
   display: inline-block;
   margin: 10px;
+  padding: 5px;
   background-color: #FFF;
-}
-
-.ingredient-list {
-  list-style-type: none;
-  padding: 0;
-  width: 150px;
 }
