add implementation code for final exam

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-right: 2%;
+  padding-left: 2%;
 }
 
 .App::before {
