--- a/src/components/UrlContainer/UrlContainer.css
+++ b/src/components/UrlContainer/UrlContainer.css
@@ -1,7 +1,26 @@
+.urls-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  height: 85vh;
+  width: 95vw;
+}
+
 .url {
   border: 1px solid black;
   display: inline-block;
   margin: 10px;
   padding: 5px;
   background-color: #FFF;
+  width: 600px;
+  height: 250px;
 }
+
+.long-url {
+  overflow-wrap: break-word;
+}
+
+
