--- a/src/components/UrlContainer/UrlContainer.css
+++ b/src/components/UrlContainer/UrlContainer.css
@@ -4,8 +4,10 @@
   margin: 10px;
   padding: 5px;
   background-color: #FFF;
+  width: 20vw;
+  height: auto;
 }
 .url>img{
   height: 20vh; 
-  width: auto;
+  width: 20vw;
 }
